--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "amazon-affiliate-api": "0.0.5",
     "body-parser": "^1.18.2",
+    "dotenv": "^16.3.1",
     "express": "^4.16.3",
     "init": "^0.1.2",
     "mysql": "^2.18.1",
